kubernetes/cmsweb/frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 443
      targetPort: 8443
#       nodePort: 31443
#   type: NodePort
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: cmssw/frontend
        name: frontend
#         tty: true
#         stdin: true
#         lifecycle:
#           postStart:
#             exec:
#               command:
#               - bash
#               - -c
#               - sudo chmod 0400 /etc/secrets/server.key /etc/secrets/robotkey.pem
        ports:
        - containerPort: 8443
          protocol: TCP
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          defaultMode: 0400
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
      volumes:
      - name: secrets
        secret:
          secretName: frontend-secrets
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
